...
    final vm = EntryViewModel(widget.entry, context.watch<KdbxBloc>());
    final entry = widget.entry;
    final loc = AppLocalizations.of(context);
    return Scaffold(
      appBar: AppBar(
        title: Text(vm.label?.takeUnlessBlank() ?? loc.noTitle,
            key: const Key('createdPasswdTitle')),
        actions: <Widget>[
          ...?!isDirty
              ? null
              : [
                  IconButton(
                    key: const Key('saveNewPasswd'),
                    icon: const Icon(Icons.save),
                    onPressed: saveCallback,
                  ),
                ],
          AppBarMenu.createOverflowMenuButton(
            context,
            builder: (context) => [
              PopupMenuItem(
                child: const ListTile(
                  leading: Icon(Icons.delete),
                  title: Text('Delete'),
                ),
                value: () {
                  final oldGroup = entry.parent;
                  entry.file.deleteEntry(entry);
                  Scaffold.of(context).showSnackBar(SnackBar(
                    content: const Text('Deleted entry.'),
...
      child: Padding(
        padding: const EdgeInsets.symmetric(vertical: 16.0),
        child: SafeArea(
          top: false,
          left: false,
          child: Column(
            key: const Key('entryDetailsColumn'),
            children: <Widget>[
              const SizedBox(height: 16),
              Row(
                crossAxisAlignment: CrossAxisAlignment.center,
                children: <Widget>[
                  const SizedBox(width: 16),
...
                            Provider.of<CommonFields>(context, listen: false));
                      }),
                    ),
                  )
                  .expand((el) => [el, const SizedBox(height: 8)]),
              AddFieldButton(
                key: const Key('addFieldButton'),
                onAddField: (key) async {
                  final cf = commonFields[key];
                  if (cf == commonFields.otpAuth) {
                    final secret = await _askForTotpSecret(context);
                    if (secret == null) {
                      return;
...
      commonField: widget.commonField,
    );
  }

  Widget _buildStringEntryFieldEditor() {
    return StringEntryFieldEditor(
      key: const Key('stringEntryFieldEditorNewPasswd'),
      onSaved: (value) {
        final newValue =
            _isProtected ? ProtectedValue.fromString(value) : PlainValue(value);
        _fieldValue = newValue;
      },
      fieldKey: widget.fieldKey,
...
