...
        assert(name != null),
        assert(groups != null);

  static const DEFAULT_GROUP_FILTER = GroupFilter(
      showRecycleBin: false, showActive: true, name: 'Hide Deleted Entries');
  static const RECYCLE_BIN = GroupFilter(
      showRecycleBin: true, showActive: false, name: 'Deleted Entries');

  final List<GroupFilterEntry> groups;

  /// show items which are in the recycle bins.
  final bool showRecycleBin;

...
      actions: <Widget>[
        ...?!isDirty
            ? null
            : [
                Builder(
                  builder: (context) => IconButton(
                    key: const Key('saveEverything'),
                    icon: const Icon(Icons.save),
                    onPressed: () async {
                      final scaffold = Scaffold.of(context);
                      final savedFiles = <String>[];
                      for (final entry in kdbxBloc.openedFiles.entries) {
                        if (entry.key.supportsWrite &&
...
//              _filteredEntries = null;
//              _filterTextEditingController.text = '';
//            });
//          },
//        ),
        PopupMenuButton<VoidCallback>(
          key: const Key('appBarFilter'),
          icon: const Icon(FontAwesomeIcons.filter),
          onSelected: (value) async {
            value();
            _logger.fine('onchanged - $value');
          },
          itemBuilder: (context) {
...
                : null,
            showBadge: cloudStatusSnapshot.hasData &&
                cloudStatusSnapshot.data.messagesUnread > 0,
            badgeColor: Theme.of(context).primaryColorDark,
            position: BadgePosition.topEnd(top: 0, end: 3),
            child: PopupMenuButton<VoidCallback>(
              key: const ValueKey('appBarOverflowMenu'),
              onSelected: (item) {
                item();
              },
              itemBuilder: (context) => [
                PopupMenuItem(
                  child: ListTile(
...
                  Text(
                    loc.emptyPasswordVaultPlaceholder,
                    textAlign: TextAlign.center,
                  ),
                  const SizedBox(height: 16),
                  PrimaryButton(
                    key: const Key('createFirstPasswd'),
                    child: Text(loc.emptyPasswordVaultButtonLabel),
                    onPressed: onPrimaryButtonPressed,
                  ),
                ],
              ),
            ),
...
